--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "jade": "~1.9.1",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
-    "express-path": "~0.3.8"
+    "express-path": "~0.3.8",
+    "stylus": "~0.50.0",
+    "nib": "~1.1.0"
   }
 }
