--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve-favicon": "~2.2.0",
     "express-path": "~0.3.8",
     "stylus": "~0.50.0",
-    "nib": "~1.1.0"
+    "nib": "~1.1.0",
+    "mongoose": "~3.8.23"
   }
 }
