--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-path": "~0.3.8",
     "stylus": "~0.50.0",
     "nib": "~1.1.0",
-    "mongoose": "~3.8.23"
+    "mongoose": "~3.8.23",
+    "lodash": "~3.2.0"
   }
 }
