--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^1.4.0",
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
-    "jade": "~1.9.1",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
     "express-path": "~0.3.8",
-    "stylus": "~0.50.0",
-    "nib": "~1.1.0",
+    "express.io": "^1.1.13",
+    "jade": "~1.9.1",
+    "lodash": "~3.2.0",
     "mongoose": "~3.8.23",
-    "lodash": "~3.2.0"
+    "morgan": "~1.5.1",
+    "nib": "~1.1.0",
+    "serve-favicon": "~2.2.0",
+    "stylus": "~0.50.0"
   }
 }
