--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "express": "~4.11.1",
     "express-path": "~0.3.8",
     "express.io": "^1.1.13",
+    "grunt": "^0.4.5",
+    "grunt-contrib-jade": "^0.15.0",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-stylus": "^0.22.0",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
     "jade": "~1.9.1",
     "lodash": "~3.2.0",
     "mongoose": "~3.8.23",
     "morgan": "~1.5.1",
     "nib": "~1.1.0",
+    "q": "^1.4.1",
     "serve-favicon": "~2.2.0",
     "stylus": "~0.50.0"
   }
