--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-ui-router": "~0.2.15",
     "semantic-ui": "~2.0.7",
     "angular-socket-io": "~0.7.0",
-    "ng-notify": "~0.6.3"
+    "ng-notify": "~0.6.3",
+    "async": "~1.4.2"
   }
 }
