--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "express-path": "~0.3.8",
-    "express.io": "^1.1.13",
+    "express.io": "git://github.com/micahbule/express.io.git",
     "grunt": "^0.4.5",
     "grunt-contrib-jade": "^0.15.0",
     "grunt-contrib-jshint": "^0.11.2",
